--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3009,3 +3009,236 @@ section,
   color: color-mix(in srgb, var(--default-color), transparent 60%);
   font-size: 14px;
 }
+
+details {
+  font-size: 1rem;
+  margin: 1em auto;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  width: 100%;
+  background: #fff;
+  border-radius: 8px;
+  position: relative;
+  width: 40em;
+}
+details[open] .summary-title {
+  max-height: auto; /* Ajusta según el contenido */
+}
+details[open] .summary-content {
+  max-height: auto; /* Ajusta según el contenido */
+}
+details .summary-title {
+  user-select: none;
+  transition: max-height 0.3s ease;
+}
+details:hover {
+  cursor: pointer;
+}
+details .summary-content {
+  border-top: 1px solid #e2e8f0;
+  cursor: default;
+  padding: 1em;
+  font-weight: 300;
+  line-height: 1.5;
+  transition: max-height 0.3s ease;
+}
+details summary {
+  list-style: none;
+  padding: 1em;
+}
+details summary:focus {
+  outline: none;
+}
+details summary:hover .summary-chevron-up svg {
+  opacity: 1;
+}
+details .summary-chevron-up svg {
+  opacity: 0.5;
+}
+details .summary-chevron-up, details .summary-chevron-down {
+  pointer-events: none;
+  position: absolute;
+  top: 0.75em;
+  right: 1em;
+  background: #fff;
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+/*Modal section*/
+
+.modal-errors {
+  z-index: 10000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.modal-errors-container {
+  max-height: 90vh;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25);
+}
+@media (max-width: 600px) {
+  .modal-errors-container {
+    width: 90%;
+ }
+}
+.modal-errors-container-header {
+  padding: 16px 32px;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal-errors-container-title {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  line-height: 1;
+  font-weight: 700;
+  font-size: 1.125;
+}
+.modal-errors-container-title svg {
+  width: 32px;
+  height: 32px;
+  color: var(--accent-color);
+}
+.modal-errors-container-body {
+  padding: 24px 32px 51px;
+  overflow-y: auto;
+}
+.rtf h1, .rtf h2, .rtf h3, .rtf h4, .rtf h5, .rtf h6 {
+  font-weight: 700;
+}
+.rtf h1 {
+  font-size: 1.5rem;
+  line-height: 1.125;
+}
+.rtf h2 {
+  font-size: 1.25rem;
+  line-height: 1.25;
+}
+.rtf h3 {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+.rtf > * + * {
+  margin-top: 1em;
+}
+.rtf self > * + :is(h1, h2, h3) {
+  margin-top: 2em;
+}
+.rtf self > :is(h1, h2, h3) + * {
+  margin-top: 0.75em;
+}
+.rtf ul, .rtf ol {
+  margin-left: 20px;
+  list-style-position: inside;
+}
+.rtf ol {
+  list-style: numeric;
+}
+.rtf ul {
+  list-style: disc;
+}
+.modal-errors-container-footer {
+  padding: 20px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-top: 1px solid #ddd;
+  gap: 12px;
+  position: relative;
+}
+.modal-errors-container-footer:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -51px;
+  left: 24px;
+  right: 24px;
+  height: 50px;
+  flex-shrink: 0;
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0.75), transparent);
+  pointer-events: none;
+}
+.button-errors {
+  padding: 12px 20px;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 0;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.15s ease;
+}
+.button-errors.is-ghost:hover, .button.is-ghost:focus {
+  background-color: #dfdad7;
+}
+.button-errors.is-primary {
+  background-color: var(--accent-color);
+  color: #fff;
+}
+.button-errors.is-primary:hover, .button.is-primary:focus {
+  background-color: var(--nav-color);
+}
+.icon-button {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: 0.15s ease;
+}
+.icon-button svg {
+  width: 24px;
+  height: 24px;
+}
+.icon-button:hover, .icon-button:focus {
+  background-color: #dfdad7;
+}
+/* ANIMATION EXIT*/
+.fade-out {
+	-webkit-animation: fade-out 1s ease-out both;
+	        animation: fade-out 1s ease-out both;
+}
+/**
+ * ----------------------------------------
+ * animation fade-out
+ * ----------------------------------------
+ */
+ @-webkit-keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
