--- a/public/assets/scss/components/card/_card.scss
+++ b/public/assets/scss/components/card/_card.scss
@@ -14,9 +14,9 @@
 .card {
     display: grid;
     place-items: center;
-    width: 80vw;
+    width: 13em;
     max-width: 21.875rem;
-    height: 28.125rem;
+    height: 17.125rem;
     overflow: hidden;
     border-radius: 0.625rem;
     box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
