--- a/public/assets/scss/components/card/_card.scss
+++ b/public/assets/scss/components/card/_card.scss
@@ -47,6 +47,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5em;
+        height: inherit;
         justify-content: space-between;
         padding:10% 0.35rem 2.675rem;
         background: linear-gradient(
