organización en front de tickets counter, botones de acción

--- a/public/assets/scss/components/ticketList/_buttons.scss
+++ b/public/assets/scss/components/ticketList/_buttons.scss
@@ -1,14 +1,21 @@
 @use "../../utils" as *;
 .buttons-actions {
-    // background-color: white;
-    // border: 1px solid white;
-    // border-radius: 14px;
-    // padding: 7px;
-    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.1);
-    // place-items: center;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
+    padding: 7px;
+    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .multi-button {
+      display: inline-flex;
+      gap: 1em;
+      height: 100%;
+      background-color: white;
+      border: 1px solid white;
+      border-radius: 14px;
+      padding: 7px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.1);
+        place-items: center;
+    }
     #cut {
         background-color: var(--accent-color);
         border: 1px solid var(--accent-color);
@@ -21,14 +28,14 @@
         
       }
       
-      #copy {
-        background-color: rgb(39,166,75);
+      #incident {
+        background-color: #27a64b;
         border: 1px solid rgb(39,166,75);
         
       }
       
-      #paste {
-        background-color: rgb(242,185,42);
+      #requeriment {
+        background-color: #f2b92a;
         border: 1px solid rgb(242,185,42);
         
       }
@@ -38,20 +45,22 @@
         padding: 10px 17px 10px 17px;          
         color: white;
         border-radius: 7px;
-        width: 5.5em;
+        width: 8.5em;
+        height: inherit;
       }
       
       .button span {
         cursor: pointer;
-        display: inline-block;
+        display: inline-flex;
+        position: relative;
         position: relative;
         transition: 0.5s;
+        align-items: center;
       }
       
       .button span:after {
         position: absolute;
         opacity: 0;
-        top: 0;
         right: -20px;
         transition: 0.5s;
       }
@@ -70,14 +79,14 @@
         content: "\f0c4";
       }
       
-      #copy span:after {
+      #incident span:after {
         font-family: FontAwesome;
-        content: "\f0c5";
+        content: "\f70c";
       }
       
-      #paste span:after {
+      #requeriment span:after {
         font-family: FontAwesome;
-        content: "\f0ea";
+        content: "\f46d";
       }
   }
   
