--- a/public/assets/scss/components/ticketList/_index.scss
+++ b/public/assets/scss/components/ticketList/_index.scss
@@ -1,4 +1,6 @@
 @forward 'buttons';
+@forward 'counterTickets';
 @forward 'headerTitle';
+@forward 'keyFrames';
 @forward 'responsive';
 @forward 'ticketList';
