--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -6,3 +6,13 @@ $azul-intermedio:#3F8EBA;
 $azul-oscuro:#000D55;
 $azul-claro:#1469B6;
 $azul-neon:#00BBFF;
+
+$background-cards:#d1d1d1;
+
+$new:#27a64b;
+$working:#1d7e38;
+$planning:#f2b92a;
+$wait:#000D55;
+$solved: #1a1a1a;
+$solved-bg:#35df65;
+$closed: #333;
