--- a/public/assets/scss/components/ticketList/_responsive.scss
+++ b/public/assets/scss/components/ticketList/_responsive.scss
@@ -10,7 +10,11 @@
                 width: 25em;
             }
         }
-        .group-ticket-actions{
+        .group-ticket-info{
+            .date-ticket{
+                position: relative;
+                top: 1em;
+            }
             .buttons-actions{
                 margin-left: 5em;
             }
