--- a/public/assets/scss/components/ticketList/_counterTickets.scss
+++ b/public/assets/scss/components/ticketList/_counterTickets.scss
@@ -2,7 +2,9 @@
 .counter-tickets {
     margin-top: 1em;
     margin-left: 1em;
-
+    .info-card{
+        max-width: 9em;
+    }
     .counter-box {
         display: block;
         text-align: center;
