--- a/public/assets/scss/components/ticketList/_keyFrames.scss
+++ b/public/assets/scss/components/ticketList/_keyFrames.scss
@@ -1,5 +1,5 @@
 .counter-tickets {
-    .counter-box:hover{
+    .counter-box:hover {
         -webkit-animation: shadow-drop-2-center 0.4s
             cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
         animation: shadow-drop-2-center 0.4s
@@ -40,3 +40,227 @@
         }
     }
 }
+.card-tickets-title {
+    .fab:hover {
+        -webkit-animation: shake-vertical 8s ease-in-out infinite reverse both;
+        animation: shake-vertical 8s ease-in-out infinite reverse both;
+    }
+    /**
+ * ----------------------------------------
+ * animation shake-vertical
+ * ----------------------------------------
+ */
+    @-webkit-keyframes shake-vertical {
+        0%,
+        100% {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
+        10%,
+        30%,
+        50%,
+        70% {
+            -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+        }
+        20%,
+        40%,
+        60% {
+            -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+        }
+        80% {
+            -webkit-transform: translateY(6.4px);
+            transform: translateY(6.4px);
+        }
+        90% {
+            -webkit-transform: translateY(-6.4px);
+            transform: translateY(-6.4px);
+        }
+    }
+    @keyframes shake-vertical {
+        0%,
+        100% {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
+        10%,
+        30%,
+        50%,
+        70% {
+            -webkit-transform: translateY(-8px);
+            transform: translateY(-8px);
+        }
+        20%,
+        40%,
+        60% {
+            -webkit-transform: translateY(8px);
+            transform: translateY(8px);
+        }
+        80% {
+            -webkit-transform: translateY(6.4px);
+            transform: translateY(6.4px);
+        }
+        90% {
+            -webkit-transform: translateY(-6.4px);
+            transform: translateY(-6.4px);
+        }
+    }
+}
+.tutorialButton {
+    -webkit-animation: puff-in-center 0.4s cubic-bezier(0.47, 0, 0.745, 0.715)
+        both;
+    animation: puff-in-center 0.4s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+}
+/**
+ * ----------------------------------------
+ * animation puff-in-center
+ * ----------------------------------------
+ */
+@-webkit-keyframes puff-in-center {
+    0% {
+        -webkit-transform: scale(2);
+        transform: scale(2);
+        -webkit-filter: blur(4px);
+        filter: blur(4px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+@keyframes puff-in-center {
+    0% {
+        -webkit-transform: scale(2);
+        transform: scale(2);
+        -webkit-filter: blur(4px);
+        filter: blur(4px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+.card-tickets-title {
+    .header-ticket-title {
+        -webkit-animation: slide-in-blurred-top 0.6s
+            cubic-bezier(0.23, 1, 0.32, 1) both;
+        animation: slide-in-blurred-top 0.6s cubic-bezier(0.23, 1, 0.32, 1) both;
+    }
+
+    /**
+ * ----------------------------------------
+ * animation slide-in-blurred-top
+ * ----------------------------------------
+ */
+    @-webkit-keyframes slide-in-blurred-top {
+        0% {
+            -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            -webkit-transform-origin: 50% 0%;
+            transform-origin: 50% 0%;
+            -webkit-filter: blur(40px);
+            filter: blur(40px);
+            opacity: 0;
+        }
+        100% {
+            -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+            transform: translateY(0) scaleY(1) scaleX(1);
+            -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+            -webkit-filter: blur(0);
+            filter: blur(0);
+            opacity: 1;
+        }
+    }
+    @keyframes slide-in-blurred-top {
+        0% {
+            -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            -webkit-transform-origin: 50% 0%;
+            transform-origin: 50% 0%;
+            -webkit-filter: blur(40px);
+            filter: blur(40px);
+            opacity: 0;
+        }
+        100% {
+            -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+            transform: translateY(0) scaleY(1) scaleX(1);
+            -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+            -webkit-filter: blur(0);
+            filter: blur(0);
+            opacity: 1;
+        }
+    }
+}
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-in-top {
+    0% {
+      -webkit-transform: translateY(-1000px);
+              transform: translateY(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-top {
+    0% {
+      -webkit-transform: translateY(-1000px);
+              transform: translateY(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  
+/**
+ * ----------------------------------------
+ * animation slide-out-top
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-out-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateY(-1000px);
+              transform: translateY(-1000px);
+      opacity: 0;
+    }
+  }
+  @keyframes slide-out-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: translateY(-1000px);
+              transform: translateY(-1000px);
+      opacity: 0;
+    }
+  }
+  
+  
