Update backend ticket, fix login isues, building ticket list info

--- a/public/assets/scss/components/ticketList/_index.scss
+++ b/public/assets/scss/components/ticketList/_index.scss
@@ -3,5 +3,6 @@
 @forward 'headerTitle';
 @forward 'keyFrames';
 @forward 'responsive';
+@forward 'statusOnline';
 @forward 'ticketList';
 @forward 'tutorialButton';
