mejoras en front, paginación en proceso, tooltops listas realizadas

--- a/public/assets/scss/components/ticketList/_buttons.scss
+++ b/public/assets/scss/components/ticketList/_buttons.scss
@@ -29,14 +29,14 @@
       }
       
       #incident {
-        background-color: #27a64b;
-        border: 1px solid rgb(39,166,75);
+        background-color: $oncurse;
+        border: 1px solid $oncurse;
         
       }
       
       #requeriment {
-        background-color: #f2b92a;
-        border: 1px solid rgb(242,185,42);
+        background-color: $planning;
+        border: 1px solid $planning;
         
       }
       
