--- a/public/assets/scss/components/ticketList/_counterTickets.scss
+++ b/public/assets/scss/components/ticketList/_counterTickets.scss
@@ -38,7 +38,9 @@
     .counter-box.new {
         background: $new;
     }
-
+    .counter-box.oncurse {
+        background: $oncurse;
+    }
     .counter-box.planning {
         background: $planning;
     }
