--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -9,10 +9,11 @@ $azul-neon:#00BBFF;
 
 $background-cards:#d1d1d1;
 
-$new:#27a64b;
-$working:#1d7e38;
+
+$new:#0ea2bd;
+$oncurse:#0fcc45;
 $planning:#f2b92a;
-$wait:#000D55;
+$wait:#0726d6;
 $solved: #1a1a1a;
-$solved-bg:#35df65;
+$solved-bg:#abafac;
 $closed: #333;
