--- a/public/assets/scss/components/ticketList/_ticketList.scss
+++ b/public/assets/scss/components/ticketList/_ticketList.scss
@@ -12,8 +12,8 @@
       border: 1px solid !important;
     }
     #search {
-      background-color: rgb(39,166,75);
-      border: 1px solid rgb(39,166,75);
+      background-color: $oncurse;
+      border: 1px solid $new;
     }
     #search span:after {
       font-family: FontAwesome;
@@ -110,7 +110,74 @@
     color: #ffffff;
     content: '\f0d7';    
   }
-  
+  .filter-result{
+    .ticket-info{
+      i{
+        color: var(--heading-color);
+      }
+    }
+    .ticket-buttom{
+      .btn {
+        font-size: 16px;
+        font-weight: 600;
+        background-color: $new;
+        padding: 12px 12px 12px 20px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        transition: all .5s cubic-bezier(.77,0,.175,1);
+        .text {
+          color: #fff;
+          line-height: 1;
+          position: relative;
+          z-index: 5;
+          margin-right: 32px;
+        }
+        svg {
+          display: inline-block;
+          position: relative;
+          z-index: 5;
+          transform: rotate(0deg) translateX(0);
+          transform-origin: left;
+          transition: all .5s cubic-bezier(.77,0,.175,1);
+        }
+        @media (max-width:1200px) {
+          svg {
+            position: absolute;
+            top: 20px;
+            right: 12px;
+          }
+        }
+        &::before {
+          content: '';
+          background-color: #333;
+          width: 20px;
+          height: 20px;
+          display: block;
+          position: absolute;
+          z-index: 1;
+          top: 55%;
+          right: 10px;
+          border-radius: 0.5em;
+          transform: translateY(-50%);
+          transition: all .5s cubic-bezier(.77,0,.175,1);
+        }
+        &:hover {
+          svg {
+            transform: rotate(45deg) translateX(-8px);
+          }
+          &::before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            right: 0;
+            top:50%;
+
+          }
+        }
+      }
+    }
+  }
   .filter-result .job-box {
   background:#fff;
     -webkit-box-shadow: 0 0 35px 0 rgba(130, 130, 130, 0.2);
