--- a/public/assets/scss/components/ticketList/_headerTitle.scss
+++ b/public/assets/scss/components/ticketList/_headerTitle.scss
@@ -54,6 +54,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        padding: 1em;
         .date-ticket {
             /* DATE of release*/
             .date {
