Sistema de filtros, correcciones en front, modelos en componente y corección en scroll paginator

--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -12,8 +12,8 @@ $background-cards:#d1d1d1;
 
 $new:#0ea2bd;
 $oncurse:#0fcc45;
-$planning:#f2b92a;
-$wait:#0726d6;
+$planning:#0726d6;
+$wait:#f2b92a;
 $solved: #1a1a1a;
 $solved-bg:#abafac;
 $closed: #333;
