--- a/public/assets/scss/components/ticketList/_ticketList.scss
+++ b/public/assets/scss/components/ticketList/_ticketList.scss
@@ -1,6 +1,13 @@
 @use "../../utils" as *;
 
-
+/*========TOGGLE LIST TICKET =========*/
+.listTicketToggled{
+  animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both ;
+}
+.listTicketNotToggled{  
+  animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
 /* ===== Career ===== */
 .career-form {
     background-color: var(--accent-color);
