actualización de servicios, actualización de frontend, se agregan migraciones, se agrega una relación, redefinicion de interfaz, frontend finalizado vista principal

--- a/public/assets/scss/components/ticketModal/incident/_modalIncident.scss
+++ b/public/assets/scss/components/ticketModal/incident/_modalIncident.scss
@@ -166,3 +166,17 @@
     
 }
 
+.modal-content{
+    #supportDataForm{
+        .card-pic{
+            border-radius: 50%;
+            padding: 7px;
+            width: 200px;
+            max-width: 100%;
+            margin: auto;
+            .ticket-photo{
+                width: inherit;
+            }
+        }
+    }
+}
