--- a/public/assets/scss/components/ticketList/_headerTitle.scss
+++ b/public/assets/scss/components/ticketList/_headerTitle.scss
@@ -122,7 +122,9 @@
         right: 50px;
         bottom: -40px;
         box-sizing: border-box;
-        padding-top: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: var(--accent-color);
         width: 80px;
         height: 80px;
