--- a/public/assets/scss/components/ticketModal/incident/_responsive.scss
+++ b/public/assets/scss/components/ticketModal/incident/_responsive.scss
@@ -5,6 +5,23 @@
         .grid-wrapper{
             display: flex;
             flex-direction: column;
+            grid-gap: 7px;
+            label.radio-card {
+
+                .card-content-wrapper{
+                    max-width: 200px;
+                    min-height: 300px;
+                    .card-content{
+                        h4{
+                            font-size: 13px;
+                        }
+                        h5{
+                            font-size: 11px;
+                        }
+                    }
+                }
+            }
         }
     }
+    
 }
