update filter type, update scroll style, update backend and new request form and blade

--- a/public/assets/scss/components/ticketList/_responsive.scss
+++ b/public/assets/scss/components/ticketList/_responsive.scss
@@ -38,3 +38,11 @@
         }
     }
 }
+
+.career-form {
+    @media (max-width:992px) {
+        .btn-custom{
+            height: 8.5em;
+        }
+    }
+}
