--- a/public/assets/scss/components/ticketModal/incident/_modalIncident.scss
+++ b/public/assets/scss/components/ticketModal/incident/_modalIncident.scss
@@ -167,7 +167,8 @@
 }
 
 .modal-content{
-    #supportDataForm{
+    #supportDataForm,
+    #requestModalForm{
         .card-pic{
             border-radius: 50%;
             padding: 7px;
