actualizaciones de fronent chat tickets

--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -8,12 +8,12 @@ $azul-claro:#1469B6;
 $azul-neon:#00BBFF;
 
 $background-cards:#d1d1d1;
-
+$background-ticketChat:#505D71;
 
 $new:#0ea2bd;
 $oncurse:#0fcc45;
 $planning:#0726d6;
-$wait:#f2b92a;
-$solved: #1a1a1a;
+$wait:#ffac69;
+$solved: #f57e7d;
 $solved-bg:#abafac;
 $closed: #333;
