--- a/public/assets/scss/layout/ticketInfo/_ticketChat.scss
+++ b/public/assets/scss/layout/ticketInfo/_ticketChat.scss
@@ -39,12 +39,12 @@
         font-weight: bold;
     }
     background: #fff;
-    width: 80%;
+    width: 90%;
     margin: 30px auto;
     border-radius: 6px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    min-height: 530px;
+    min-height: 50em;
     position: relative;
     .window-title {
         padding: 14px;
@@ -97,6 +97,8 @@
         padding-left: 176px;
     }
     .conversation-list {
+        visibility: visible;
+        opacity: 1;
         width: 176px;
         background: #505d71;
         float: left;
@@ -104,8 +106,11 @@
         left: 0;
         top: 0;
         bottom: 0;
-
+        ul{
+            padding-left: 0;
+        }
         ul li {
+            
             &.active a {
                 background: #445166;
                 color: #fff;
@@ -122,9 +127,9 @@
                 align-items: center;
                 text-wrap: inherit;
                 i {
-                    color: #79889d;
+                    color: $new;
                     font-size: 1.2em;
-
+                    transition: all 0.3s ease-in-out;
                     &.fa-times {
                         position: absolute;
                         top: 19px;
@@ -132,7 +137,11 @@
                         font-size: 10px;
                     }
                 }
-
+                &:hover{
+                    i{
+                        color:#fff;
+                    }
+                }
                 span {
                     display: inline-block;
                     margin-left: 14px;
@@ -144,18 +153,32 @@
                 }
             }
         }
-
-        .online {
-            color: #82cf85;
+        .status{
+            position: absolute;
+            display: inline-flex;
+            width: 15px;
+            height: 15px;
+            background-color: #0fcc45;
+            opacity: .9;
+            left: 20px;
+            top: 12px;
+            border-radius: 50%;
+            .online {
+                color: $oncurse;  
+                animation: blink 1s linear infinite;        
+            }
+            .idle {
+                color: $wait;
+                animation: blink 1s linear infinite;   
+            }
+    
+            .offline {
+                color: $solved;
+                animation: blink 1s linear infinite;   
+            }
         }
+        
 
-        .idle {
-            color: #ffac69;
-        }
-
-        .offline {
-            color: #f57e7d;
-        }
     }
 
     .chat-area {
@@ -164,9 +187,18 @@
         top: 0;
         bottom: 0;
         left: 176px;
-        right: 175px;
+        right: 200px;
         box-shadow: inset 0 1px 3px rgba(207, 218, 225, 0.42);
+        .online{
+            color: $oncurse;
+        }
+        .idle {
+            color: $wait;            
+        }
 
+        .offline {
+            color: $solved;            
+        }
         .title {
             padding: 10px;
             overflow: hidden;
@@ -189,17 +221,19 @@
         right: 0;
         bottom: 44px;
         overflow-y: auto;
+        overflow-x: hidden;
         outline: none;
-
+        margin-bottom: 2em;
         & > div > .jspPane {
             margin-left: 0 !important;
         }
     }
     .chat-area ul {
         margin-right: -4px;
+        padding-left: 0;
     }
     .chat-area ul > li {
-        border-top: 1px solid #cfdae1;
+        border-bottom: 1px solid #cfdae1;
         overflow: hidden;
         position: relative;
     }
@@ -211,25 +245,27 @@
     }
     .chat-area ul .name {
         padding: 14px;
-        text-align: right;
+        text-align: center;
         width: 100px;
         float: left;
         color: #5d7185;
         font-weight: bold;
         line-height: 20px;
+        border-right: 1px solid #cfdae1;
     }
     .chat-area ul .message {
-        padding: 14px;
-        border-left: 1px solid #cfdae1;
+        padding: 14px;        
         float: left;
         color: #333f4d;
-        width: 214px;
+        width: 80%;
+        position: relative;
+        height: auto;
     }
     .chat-area ul .message > p {
         line-height: 20px;
     }
     .chat-area ul .message > p > .blue-label {
-        background: #6ea0ff;
+        background: $new;
         color: #fff;
         padding: 2px 5px;
         border-radius: 3px;
@@ -254,35 +290,40 @@
         bottom: 0;
         border-top: 1px solid #cfdae1;
         flex-direction: row;
+        .input-wrapper {
+            background: #fff;
+            border: 1px solid #cfdae1;
+            border-radius: 5px;
+            display: flex;
+            overflow: hidden;
+            float: left;
+            width: inherit;
+            flex-direction: row;
+            form{
+                display: inline-flex;
+                width: -webkit-fill-available;
+            }
+            input {
+                height: 30px;
+                line-height: 30px;
+                border: 0;
+                margin: 0;
+                padding: 0 10px;
+                outline: none;
+                color: #5d7185;
+                min-width: 271px;
+                width: inherit;
+            }
+            i {
+                font-size: 18px;
+                color: #a0b4c0;
+                margin-right: 10px;
+                margin-top: 8px;
+                cursor: pointer;
+            }
+        }
     }
-    .input-area .input-wrapper {
-        background: #fff;
-        border: 1px solid #cfdae1;
-        border-radius: 5px;
-        display: flex;
-        overflow: hidden;
-        float: left;
-        width: inherit;
-        flex-direction: row;
-    }
-    .input-area .input-wrapper input {
-        height: 30px;
-        line-height: 30px;
-        border: 0;
-        margin: 0;
-        padding: 0 10px;
-        outline: none;
-        color: #5d7185;
-        min-width: 271px;
-        width: inherit;
-    }
-    .input-area .input-wrapper i {
-        font-size: 18px;
-        color: #a0b4c0;
-        margin-right: 10px;
-        margin-top: 8px;
-        cursor: pointer;
-    }
+
     .input-area > input {
         background: #a0b4c0;
         border: none;
@@ -298,6 +339,10 @@
         outline: none;
 
     }
+    .input-area .send-btn{
+        color: #fff;
+        background-color: #a0b4c0 ;
+    }
     .input-area  .send-btn:hover{
         background-color: $new;
         transition: 0.4s ease-in-out;
@@ -310,9 +355,11 @@
         overflow: hidden;
         border-left: 1px solid #cfdae1;
         border-top: 1px solid #cfdae1;
-        width: 175px;
+        width: 200px;
+        overflow: scroll;
     }
     .right-tabs > ul.tabs {
+        padding-left: 0;
         overflow: hidden;
     }
     .right-tabs > ul.tabs > li {
@@ -323,7 +370,7 @@
     }
     .right-tabs > ul.tabs > li > a {
         border-left: 1px solid #cfdae1;
-        color: #72a3ff;
+        color: $new;
         display: block;
         background: #eef2f8;
         padding: 8px 0;
@@ -391,7 +438,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        height: 45px;
+        height: 70px;
         padding: 8px;
         background: #445166;
 
@@ -403,8 +450,8 @@
 
             > i {
                 position: absolute;
-                top: -2px;
-                right: -2px;
+                top: 12px;
+                right: -2px;                
             }
 
             > img {
@@ -424,8 +471,7 @@
             .availability {
                 display: block;
                 font-weight: normal;
-                color: #8391a1;
-                margin-top: 5px;
+                color: #8391a1;                
             }
         }
     }
