--- a/public/assets/scss/components/ticketList/_ticketList.scss
+++ b/public/assets/scss/components/ticketList/_ticketList.scss
@@ -2,11 +2,16 @@
 
 /*========TOGGLE LIST TICKET =========*/
 .listTicketToggled{
-  animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both ;
+  opacity: 1 !important;
+  height: auto !important;
+  animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both !important;
 }
 .listTicketNotToggled{  
-  animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both !important;    
+}
+.listTicketHidden {
+  opacity: 0;
+  height: 0;     
 }
 /* ===== Career ===== */
 .career-form {
