--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -10,6 +10,8 @@ $azul-neon:#00BBFF;
 $background-cards:#d1d1d1;
 $background-ticketChat:#505D71;
 
+$violet:#7f00ff;
+$gold:#efbf04;
 $new:#0ea2bd;
 $oncurse:#0fcc45;
 $planning:#0726d6;
