--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -10,6 +10,11 @@ $azul-neon:#00BBFF;
 $background-cards:#d1d1d1;
 $background-ticketChat:#505D71;
 
+$low:#0fcc45;
+$hight:#ED0C0C;
+$medium:#ECE636;
+$max:#848386;
+
 $violet:#7f00ff;
 $gold:#efbf04;
 $new:#0ea2bd;
