--- a/public/assets/scss/layout/ticketInfo/_ticketChat.scss
+++ b/public/assets/scss/layout/ticketInfo/_ticketChat.scss
@@ -336,6 +336,7 @@
             float: left;
             width: inherit;
             flex-direction: row;
+            align-items: center;
             form{
                 display: inline-flex;
                 width: -webkit-fill-available;
@@ -357,6 +358,14 @@
                 margin-right: 10px;
                 margin-top: 8px;
                 cursor: pointer;
+            }
+            .img-loaded{
+                width: 35px;
+                height: 30px;
+                margin-right: 10px;
+                cursor: zoom-in;
+                animation: roll-in-left 0.6s ease-out 1s both,
+                wobble-hor-bottom 2s ease-in-out 2s infinite both;
             }
         }
     }
